Unify ApiBackend Message, ErrorMessage BackendService Fix interface BackendService, remove unsafe method